[package]
name = "ibuf"
version = "0.3.1"
edition = "2021"
authors = ["Brian G"]
repository = "https://github.com/open1s/ibuf.git"
description = "A memory buffer pool implementation"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mbuf_bench"
path = "benches/mbuf_bench.rs"
harness = false

[features]
default = []